--- a/dashboard.html
+++ b/dashboard.html
@@ -467,7 +467,7 @@
         </div>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <div class="header_img">
-          <img src="https://i.imgur.com/hczKIze.jpg" alt />
+          <img src="user.png" alt />
         </div>
       </div>
     </header>
@@ -509,7 +509,7 @@
         <div class="row tabchart">
             <div id="table-container-dashboard" class="">
                 <button id="closeTableBtnDashboard" class="close-button">
-                  <i class="fa-solid fa-minimize" style="font-weight: bold; margin-top: -10%; "></i>
+                  <i class="fas fa-minus" style="font-weight: bold; margin-top: -10%; "></i>
                 </button>
                 <table id="workTableDashboard" class="table table-bordered table-hover" style="height:100px; overflow-y: scroll;">
                     <thead>
@@ -954,7 +954,7 @@
               });
             } else {
               // Change icon to times
-              $(this).html(' <i class="fa-solid fa-minimize" style="font-weight: bold; margin-top: -10%; "></i>');
+              $(this).html(' <i class="fas fa-minus" style="font-weight: bold; margin-top: -10%; "></i>');
               tableContainer.css({
                 bottom: "230px",
               });
