--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC_Form</title>
     <link rel="stylesheet" href="C_form.css" />
-    <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="C_form.css" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
