--- a/edit-feature.html
+++ b/edit-feature.html
@@ -6,7 +6,7 @@
     <title>PMC</title>
     <!-- <link rel="stylesheet" href="C_form.css" /> -->
     <link rel="stylesheet" href="style1.css" />
-    <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="C_form.css" />
     <!-- legend -->
  
 
