--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
     <link rel="stylesheet" href="style1.css" />
-    <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="C_form.css" />
     <style>
       #map {
         top: 65px;
