--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -354,6 +354,68 @@
    
    <script>
 
+document.addEventListener("DOMContentLoaded", function() {
+  // Function to get query parameters from the URL
+  function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+  }
+
+  // Get the 'id' query parameter
+  const worksAaApprovalId = getQueryParam('id');
+
+  console.log(worksAaApprovalId);
+
+  // Function to fetch and fill form data
+  function fetchAndFillFormData(id) {
+    fetch('api-responses/all-project-data.json')
+      .then(response => response.json())
+      .then(data => {
+        // Find the project with the matching 'works_aa_approval_id'
+
+        const project = data.data.projectData.find(project => project.project.works_aa_approval_id === id);
+        console.log(project);
+        if (project) {
+          // Populate form fields with project data
+          document.getElementById('projectNo').value = project.project.sys_proj_id || '';
+          document.getElementById('aaWork').value = project.project.name_of_work || '';
+          document.getElementById('scopeOfWork').value = project.project.scope_of_work || '';
+          document.getElementById('projectFinancialYear').value = project.project.project_financial_year || '';
+          document.getElementById('projectOffice').value = project.project.scope_of_work || '';
+          document.getElementById('juniorName').value = project.project.je_name || '';
+          document.getElementById('contactNo').value = project.project.contact || '';
+          document.getElementById('dateIn').value = project.project.scope_of_work || '';
+        
+          // Continue for other fields...
+
+          document.getElementById('department').value = project.project.scope_of_work || '';
+          document.getElementById('projectType').value = project.project.scope_of_work || '';
+         
+
+          // For 'workType', 'department', and other select fields, you may need to set the selected index based on the value.
+          // Example for 'workType':
+          let workTypeSelect = document.getElementById('workType');
+          for (let i = 0; i < workTypeSelect.options.length; i++) {
+            if (workTypeSelect.options[i].text === project.project.work_type) {
+              workTypeSelect.selectedIndex = i;
+              break;
+            }
+          }
+          // Repeat similar steps for other select fields like 'department', 'zone', etc.
+        } else {
+          console.error('Project not found');
+        }
+      })
+      .catch(error => console.error('Error fetching project data:', error));
+  }
+
+  // Only fetch and fill form data if an 'id' parameter is present
+  if (worksAaApprovalId) {
+    fetchAndFillFormData(worksAaApprovalId);
+  }
+});
+
+
 
 
       function goToNextPage() {
