--- a/dashboard.html
+++ b/dashboard.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PMC_Form</title>
-    <link rel="stylesheet" href="C_form.css" />
+    <title>PMC</title>
     <link rel="stylesheet" href="C_form.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
