--- a/edit-feature.html
+++ b/edit-feature.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
-    <!-- <link rel="stylesheet" href="C_form.css" /> -->
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="C_form.css" />
     <!-- legend -->
  
@@ -14,9 +14,10 @@
  <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
     <style>
       #map {
+        position: absolute;
         top: 64px;
         left: 0px;
-        height: 90vh;
+        height: 92vh;
         width: 100%;
       }
     </style>
