--- a/geometry_page.html
+++ b/geometry_page.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preview page</title>
+    <title>PMC</title>
+    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
     <link rel="stylesheet" href="C_form.css" />
     <link
       rel="stylesheet"
