--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
+    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="C_form.css" />
     <style>
       #map {
         top: 65px;
         left: 0px;
-        height: 90vh;
+        height: 93vh;
         width: 100%;
       }
 
