--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -495,6 +495,11 @@
 								(project) => project.project.works_aa_approval_id === id
 							);
 
+							if(!project){
+								alert('project with this works_aa_approval_id is not found')
+								return
+							}
+
 							let department = depData.find((dep) => dep.department_id == project.project.d_id);
 							let zone = zoneData.find((dep) => dep.zone_id == project.project.constituency_zone_id);
 							let ward = wardData.find((ward) => ward.zone_id == project.project.constituency_ward_id);
