Update wtih zoom to layer from conceptual form

--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -72,7 +72,7 @@
 					<label for="projectNo">Project No:</label>
 					<input type="text" id="projectNo" name="projectNo" required />
 					<label for="aaWork">Name of AA work:</label>
-					<input type="text" id="aaWork" name="aaWork" required />
+					<textarea type="text" id="aaWork" name="aaWork" rows="4" required></textarea>
 
 					<label for="workType">Work Type:</label>
 					<select id="workType" name="workType" required>
@@ -85,7 +85,7 @@
 					</select>
 
 					<label for="scopeOfWork">Scope of Work:</label>
-					<textarea id="scopeOfWork" name="scopeOfWork" rows="4" required></textarea>
+					<input id="scopeOfWork" name="scopeOfWork" rows="4" required>
 
 					<label for="projectFinancialYear">Project Financial Year:</label>
 					<select input id="projectFinancialYear" name="projectFinancialYear" required>
