--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
         if (wardname) {
           var cql_filterm = `Ward_Name='${wardname}'`;
           fitbou(cql_filterm);
-          ward_names.setParams({
+          ward_boundary.setParams({
             cql_filter: cql_filterm,
             styles: "highlight",
           });
-          ward_names.addTo(map).bringToFront();
+          ward_boundary.addTo(map).bringToFront();
         }
         $("#searchInputDashboard").autocomplete({
           minLength: 3,
