--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <title>PMC</title>
     <link rel="stylesheet" href="C_form.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
+    <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
