--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
-    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
+    <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
     <link rel="stylesheet" href="C_form.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" />
