--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
-    <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
+    <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="C_form.css" />
     <style>
