--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
   <title>PMC</title>
   <link rel="stylesheet" href="C_form.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
+  <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" />
 
