--- a/dashboard.html
+++ b/dashboard.html
@@ -136,7 +136,13 @@
   <link rel="stylesheet" href="libs/leaflet-wms-legend/leaflet.wmslegend.css" />
   <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
 
+ 
+
   <style>
+    .leaflet-control-layers-toggle {
+      top: 0;
+    }
+
     .leaflet-control-layers-list {
       width: 200px;
       height: 200px;
@@ -144,6 +150,7 @@
       scrollbar-width: thin;
       font-size: 9px;
       padding: 0px;
+
     }
 
     .leaflet-control-layers-overlays {
@@ -151,10 +158,12 @@
     }
 
     #map {
-      top: 64px;
+      top: 0px;
       left: 55px;
-      height: 90vh;
+      height: 100vh;
       width: 97%;
+      z-index: 0;
+
     }
 
     .multi-checkboxes_wrap:before {
@@ -268,6 +277,11 @@
       .sidebar a {
         font-size: 18px;
       }
+    }
+    #thead {
+      position: sticky;
+      top: 0;
+      z-index: 1;
     }
   </style>
 </head>
@@ -441,12 +455,20 @@
         <button id="closeTableBtnDashboard" class="close-button">
           <i class="fa-solid fa-minus" style="font-weight: bold; margin-top: -10%; width: 10px;"></i>
         </button>
+
         <div id="tablestats"
           style="float: left; top: 5px; position: absolute; font-weight: bold; left:10px; color:sienna; font-size: 12px;">
         </div>
+
+        <button id="printButton" onclick="printData()"
+          style="float: left; top:-3px; position: absolute;left:500px; color:green; font-size: 12px; background-color: transparent; height: 29px; width: 35px;">
+          <i class="fa-solid fa-file-export" style="float: left; top: 0px;left: 400px;"></i>
+        </button>
+
+
         <table id="workTableDashboard" class="table table-bordered table-hover"
           style="margin-top: 30px; height:100px; width: 100px; overflow-y: scroll; ">
-          <thead>
+          <thead id="thead">
             <tr>
               <th>Zone</th>
               <th>Ward</th>
@@ -456,15 +478,90 @@
               <th>JE Name</th>
             </tr>
           </thead>
-
           <tbody></tbody>
         </table>
-
-
       </div>
     </div>
-
   </div>
+
+
+
+  <!-- Include DataTables JS -->
+  <script type="text/javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+
+  <!-- leaflet -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+  <!-- Leaflet JavaScript -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+  <!-- Leaflet.draw JavaScript -->
+  <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
+  <!-- Esri Leaflet JavaScript -->
+  <script src="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet/0.0.1-beta.5/esri-leaflet.js"></script>
+
+  <!-- Esri Leaflet Geocoder JavaScript -->
+  <script
+    src="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.js"></script>
+
+  <!-- Include jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
+    integrity="sha384-3hxxuF2FJ23oEeqWrYkzOWZC9qYcu32/7v1+K9tZtG5DXtNwkkr8Wt5IbSLz1Odg"
+    crossorigin="anonymous"></script>
+  <!-- Leflet for adding draw tool END -->
+
+  <script src="https://unpkg.com/@turf/turf@6.3.0/turf.min.js"></script>
+
+  <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+  <!-- <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script> -->
+
+  <!-- html2pdfcdn -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
+    integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.0/jspdf.umd.min.js"></script> -->
+
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+  <!-- MousePosition -->
+  <script src="libs/Leaflet.MousePosition-master/src/L.Control.MousePosition.js"></script>
+
+  <script src="libs/polyline-measure/line-measure.js"></script>
+  <script src="libs/leaflet-measure-master/leaflet-measure.js"></script>
+  <script src="libs/feat.js"></script>
+
+  <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
+
+
+  <!-- to geojson -->
+  <script src="https://unpkg.com/togeojson@1.1.0/togeojson.js"></script>
+
+  <!-- leaflet-ajax -->
+  <script src="https://unpkg.com/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
+    integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   <script src="index.js"></script>
   <script src="select2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
@@ -477,7 +574,6 @@
 
 
   <script>
-
     function openNav() {
       document.getElementById("mySidenav").style.width = "250px";
       document.getElementById("mySidenav").style.height = "500px";
@@ -2049,6 +2145,86 @@
       filterDataAndDrawMap();
     }
   </script>
-</body>
 
+  <script>
+
+    //print data 
+
+    // function printData() {
+    //   var printableData = document.getElementById('table-container-dashboard').innerHTML;
+
+    //   var printWindow = window.open('', '_blank');
+    //   printWindow.document.write('<html><head><title>Print</title></head><body>');
+    //   printWindow.document.write(printableData);
+    //   printWindow.document.write('</body></html>');
+    //   printWindow.document.write('dataTables');
+    //   printWindow.document.close();
+    //   printWindow.print();
+    // }
+
+    // function printData(filename){
+    //   var data=[];
+    //   var rows=document.querySelectorAll("table tr");
+
+    //   for(var i=0;i<rows.length;i++){
+    //     var row = [],cols = rows[i].querySelectorAll("td","th");
+
+    //     for(var j=0;j<cols.length;j++){
+    //       row.push(cols[j].innerText);
+    //     }
+    //     data.push(row.join(","));
+    //   }
+    //   downloadCSVFile(data.join("\n"),filename);
+    // }
+
+    // function downloadCSVFile(csv,filename){
+    //   var csv_file,download_link
+    //   csv_file=new Blob([csv],{type: "text/csv"});
+    //   download_link = document.createElement("a");
+    //   download_link.download=filename;
+    //   download_link.href=window.URL.createObjectURL(csv_file);
+    //   download_link.style.display="none";
+    //   document.body.appendChild(download_link);
+    //   download_link.click();
+    // }
+    //   </script>
+
+
+
+  <script>
+
+    //working on csv form
+
+    function printData() {
+      const table = document.getElementById("table-container-dashboard");
+      const rows = table.querySelectorAll("tr");
+      let csvContent = "data:text/csv;charset=utf-8,";
+
+      rows.forEach(function (row) {
+        const rowData = [];
+        row.querySelectorAll("td").forEach(function (cell) {
+          rowData.push(cell.innerText);
+        });
+        csvContent += rowData.join(",") + "\n";
+      });
+
+
+      //     const newWindow = window.open();
+      //     newWindow.document.write('<pre>' + csvContent + '</pre>');
+      //     newWindow.document.close();
+      // }
+
+      const link = document.createElement("a");
+      link.setAttribute("href", encodeURI(csvContent));
+      link.setAttribute("download", "data.csv");
+
+
+      document.body.appendChild(link);
+
+
+      link.click();
+    }
+  </script>
+
+</body>
 </html>
