--- a/dashboard.html
+++ b/dashboard.html
@@ -211,7 +211,7 @@
       left: 80px;
       background-color: #f3f3f3;
       overflow-x: hidden;
-      transition: 0.5s;
+      transition: 0s;
       padding-top: 10px;
       overflow-y: scroll;
       border-radius: 10px;
@@ -993,8 +993,20 @@
           // //////////////////////addded 11-03-2023////////////////////////////////////////////////
 
           var tenderAmount = parseFloat(project.properties.tender_amo);
-          totalTenderAmount += tenderAmount;
+
+          // console.log("tenderAmount:", tenderAmount); // Debugging output
+                  if (!isNaN(tenderAmount)) {
+            totalTenderAmount += tenderAmount;
+        } else {
+            console.log("Invalid tender amount:", project.properties.tender_amo);
+        }
+
+
+          // totalTenderAmount += tenderAmount;
           var totalcountofselectedrecords = filteredData.totalFeatures;
+
+          var totalTenderAmountInLakh = totalTenderAmount / 100000; // Convert to lakh
+
           // //////////////////////addded 11-03-2023////////////////////////////////////////////////
 
 
@@ -1006,6 +1018,7 @@
             <td>${project.properties.departme_1}</td>
             <td>${project.properties.work_type}</td>
             <td>${project.properties.tender_amo}</td>
+            <td>${project.properties.je_name}</td>
             <td>${project.properties.Agency}</td>
             <td>${project.properties.Project_Office}</td> 
             <td>${project.properties.Budget_Code}</td>
@@ -1018,8 +1031,13 @@
           // console.log(totalTenderAmount.toFixed(2))
           console.log(totalTenderAmount, totalcountofselectedrecords, 'helooooooooooooo');
 
-          $("#tablestats").html(`Total Project Tender Amount: ${totalTenderAmount.toFixed(2)} ,
+          // $("#tablestats").html(`Total Project Tender Amount: ${totalTenderAmount.toFixed(2)} ,
+          //     Total Projects: ${totalcountofselectedrecords}`);
+
+          
+          $("#tablestats").html(`Total Project Tender Amount (in lakh): ${totalTenderAmountInLakh.toFixed(2)} ,
               Total Projects: ${totalcountofselectedrecords}`);
+
           // console.log(totalTenderAmount, totalcountofselectedrecords,'helooooooooooooo');
 
           // //////////////////////addded 11-03-2023////////////////////////////////////////////////
@@ -1100,13 +1118,13 @@
             $(this).html(' <i class="fa-solid fa-minus" style="font-weight: bold; margin-top: -10%; width:10px; "></i>');
             tableContainer.css({
               // display:"block",
-              bottom: "230px",
+              bottom: "310px",
               width: "570px",
               height: "500px",
               // top:"20%",
               left: "60%",
               overflowY: "scroll",
-              overflowX: "hidden",
+              overflowX: "scroll",
             });
           }
           isClosed = !isClosed; // Toggle the state
