changes on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -444,7 +444,7 @@
       <div id="table-container-dashboard">
 
         <button id="closeTableBtnDashboard" class="close-button">
-          <i class="fa-solid fa-minus" style="font-weight: bold; margin-top: -10%; width: 10px;"></i>
+          <i class="fa-solid fa-minus" style="font-weight: bold; margin-top: 3px; width: 10px; position: fixed;"></i>
         </button>
 
         <div id="tablestats"
@@ -1115,7 +1115,7 @@
             });
           } else {
             // Change icon to times
-            $(this).html(' <i class="fa-solid fa-minus" style="font-weight: bold; margin-top: -10%; width:10px; "></i>');
+            $(this).html(' <i class="fa-solid fa-minus" style="font-weight: bold; margin-top: 3px; width:10px; position:fixed "></i>');
             tableContainer.css({
               // display:"block",
               bottom: "310px",
