--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -78,12 +78,12 @@
 					</div>
 
 					<label for="projectNo">Project No:</label>
-					<input type="text" id="projectNo" name="projectNo" required disabled />
+					<input type="text" id="projectNo" name="projectNo" required  />
 					<label for="aaWork">Name of AA work:</label>
-					<textarea type="text" id="aaWork" name="aaWork" rows="4" required disabled></textarea>
+					<textarea type="text" id="aaWork" name="aaWork" rows="4" required ></textarea>
 
 					<label for="workType">Work Type:</label>
-					<select id="workType" name="workType" required disabled>
+					<select id="workType" name="workType" required >
 						<option value="Select Work Type">Select Work Type</option>
 						<option value="Emergency And Special Work">Emergency And Special Work</option>
 						<option value="Maintenance Work">Maintenance Work</option>
@@ -93,10 +93,10 @@
 					</select>
 
 					<label for="scopeOfWork">Scope of Work:</label>
-					<input id="scopeOfWork" name="scopeOfWork" rows="4" required disabled />
+					<input id="scopeOfWork" name="scopeOfWork" rows="4" required  />
 
 					<label for="projectFinancialYear">Project Financial Year:</label>
-					<select input id="projectFinancialYear" name="projectFinancialYear" required disabled>
+					<select input id="projectFinancialYear" name="projectFinancialYear" required >
 						<option value="Select projectFinancialYear">Select Project Financial Year</option>
 						<option value="2022-2023">2022-2023</option>
 						<option value="2023-2024">2023-2024</option>
@@ -104,7 +104,7 @@
 					</select>
 
 					<label for="department">Department:</label>
-					<select id="department" name="department" required disabled>
+					<select id="department" name="department" required >
 						<option value="">Select Department</option>
 						<option value="Road">Road</option>
 						<option value="Building">Building</option>
@@ -126,19 +126,19 @@
 					</select>
 
 					<label for="projectOffice">Project Office:</label>
-					<input type="text" id="projectOffice" name="projectOffice" required disabled />
+					<input type="text" id="projectOffice" name="projectOffice" required  />
 
 					<label for="juniorName">Junior Engineer Name:</label>
-					<input type="text" id="juniorName" name="juniorName" required disabled />
+					<input type="text" id="juniorName" name="juniorName" required  />
 
 					<label for="contactNo">Contact No:</label>
-					<input type="tel" id="contactNo" name="contactNo" required disabled />
+					<input type="tel" id="contactNo" name="contactNo" required  />
 
 					<label for="dateIn">Date-In:</label>
-					<input type="date" id="dateIn" name="dateIn" required disabled />
+					<input type="date" id="dateIn" name="dateIn" required  />
 
 					<label for="zone">Zone:</label>
-					<select id="zone" name="zone" required disabled>
+					<select id="zone" name="zone" required >
 						<option value=" ">Select Zone</option>
 						<option value="D.M.C. Zone 1">D.M.C. Zone 1</option>
 						<option value="D.M.C. Zone 2">D.M.C. Zone 2</option>
@@ -150,7 +150,7 @@
 					<!-- <label for="ward">Ward:</label> -->
 					<!-- // thi line is added\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 					<label for="ward">Ward:</label>
-					<select id="ward" name="ward" required disabled>
+					<select id="ward" name="ward" required >
 						<option value="Select Ward">Select Ward</option>
 						<option value="Yeravada Kalas Dhanori">Yeravada Kalas Dhanori</option>
 						<option value="Dhole Patil Ward">Dhole Patil Ward</option>
@@ -170,7 +170,7 @@
 					</select>
 
 					<label for="ward">Budget Code:</label>
-					<input type="text" id="budgetCodes" name="budgetCodes" placeholder="budget code" required  disabled/>
+					<input type="text" id="budgetCodes" name="budgetCodes" placeholder="budget code" required  />
 
 					<label for="Width">Width</label>
 					<input type="text" id="Width" name="Width" placeholder="Width in m" required />
@@ -597,9 +597,6 @@
 										break;
 									}
 								}
-
-								document.getElementById('projectType').value = data.project.project_type || '';
-								document.getElementById('projectOffice').value = data.project.project_office || '';
 							} else {
 								console.error('Project not found');
 							}
@@ -658,7 +655,6 @@
 				axios
 					.post('Apis/Conceptual_Form.php', formObject)
 					.then(function (response) {
-						console.log(response.data.data.id, 'response.data.data.id');
 						localStorage.setItem('lastInsertedId', response.data.data.id);
 						localStorage.setItem('bufferWidth', response.data.data.width);
 						localStorage.setItem('roadLenght', response.data.data.lenght);
