--- a/dashboard.html
+++ b/dashboard.html
@@ -67,10 +67,10 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <!-- Leaflet.draw CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
+  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" /> -->
 
   <!-- Leaflet.draw JavaScript -->
-  <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
+  <!-- <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script> -->
   <!-- Esri Leaflet JavaScript -->
   <script src="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet/0.0.1-beta.5/esri-leaflet.js"></script>
 
@@ -387,7 +387,7 @@
   </div>
   <header class="header justify-content-between bg-transparent" id="header">
     <div>
-      <h5 class="text-primary fw-bold">Geo<span class="text-danger">Pulse</span></h5>
+      <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5>
     </div>
     <div class="d-flex justify-content-between ms-auto" role="search">
       <div class="input-group">
@@ -1105,7 +1105,7 @@
             $(this).html('<i class="fa-regular fa-window-maximize" style="font-weight: bold; margin-top: -20%; margin-left:-15px; width:35px; background-color:transparent; "></i>');
             tableContainer.css({
               paddingTop: "10px",
-              bottom: "60px",
+              bottom: "140px",
               left: "97%",
               width: "30px",
               height: "25px",
