--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
   <!-- to geojson -->
-  <script src="https://unpkg.com/togeojson@1.1.0/togeojson.js"></script>
+  <!-- <script src="https://unpkg.com/togeojson@1.1.0/togeojson.js"></script> -->
 
   <!-- leaflet-ajax -->
   <script src="https://unpkg.com/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
@@ -131,11 +131,10 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <header class="header justify-content-between " id="header">
-      <div>
-        <h5>GeoPulse</h5>
-      </div>
+  <header class="header justify-content-between bg-transparent" id="header">
+    <div>
+      <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5>
+    </div>
       <div class="d-flex justify-content-between ms-auto" role="search">
 
         &nbsp;&nbsp;&nbsp;&nbsp;
