--- a/index.html
+++ b/index.html
@@ -9,10 +9,40 @@
   <link rel="stylesheet" href="C_form.css" />
   <style>
     #map {
-      top: 65px;
+      top: 0px;
       left: 0px;
-      height: 93vh;
+      height: 99vh;
       width: 100%;
+      z-index: 1;
+    }
+
+    .leaflet-container .leaflet-control-attribution {
+    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    margin: 29px;
+    top: 151px;
+}
+/* Search icon */
+
+.leaflet-touch .geocoder-control-input {
+    height: 30px;
+    line-height: 30px;
+    background-size: 30px;
+    position: relative;
+    top: -5px;
+}
+    
+    /* .leaflet-control-zoom-in{
+      position: relative;
+      left: 50px;
+      border: 1px solid;
+    } */
+
+    .leaflet-control-zoom{
+      position: absolute;
+      left: 1450px;
+      top: 600px;
+      border: 1px solid;
     }
   </style>
   <!-- bootstrap -->
@@ -131,10 +161,11 @@
 </head>
 
 <body>
-  <header class="header justify-content-between bg-transparent" id="header">
-    <div>
-      <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5>
-    </div>
+  <div class="container-fluid">
+    <header class="header justify-content-between bg-transparent" id="header">
+      <div>
+        <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5>
+      </div>
       <div class="d-flex justify-content-between ms-auto" role="search">
 
         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -309,7 +340,18 @@
     measureControl.addTo(map);
 
 
-  
+    // // Create a custom control
+    // var drawControls = L.control({ position: 'topleft' });
+
+    // // Define the HTML content for the control
+    // drawControls.onAdd = function (map) {
+    //   var div = L.DomUtil.create('div', 'draw-control');
+    //   div.innerHTML = '<a class="draw_feature" href="index.html" style="border:2px solid #bbb;  margin-top:25px; border-radius:5px; background-color:white; padding:10px 5px ;" title="Draw New Feature"> <img src="png/006-drawing.png" style="width: 20px; height: 30px; padding:3px;"></a>';
+    //   return div;
+    // };
+
+    // // Add the control to the map
+    // drawControls.addTo(map);
     // Create a custom control
     var editControl = L.control({ position: 'topleft' });
 
@@ -624,7 +666,7 @@
       // Change the button's onclick function to stop the task
       button.onclick = function () {
         button.innerHTML = 'Perform Task';
-          var drawFeatureButton = document.querySelector('.draw_feature');
+      var drawFeatureButton = document.querySelector('.draw_feature');
             if (drawFeatureButton) {
               drawFeatureButton.removeAttribute('disabled');
             }
@@ -641,7 +683,7 @@
       var button = L.DomUtil.create('button', 'custom-button');
       button.innerHTML = 'Perform Task';
       button.onclick = function () {
-        var drawFeatureButton = document.querySelector('.draw_feature');
+      var drawFeatureButton = document.querySelector('.draw_feature');
         if (button.innerHTML === 'Perform Task') {
           button.innerHTML = 'Stop Task';
           performTask();
@@ -661,13 +703,13 @@
             }
 
         } else {
-
+          
           if (drawFeatureButton) {
               drawFeatureButton.setAttribute('disabled', false);
             }
 
               // button.innerHTML = 'Perform Task';
-              // Add the draw control back if it's not currently added
+          // Add the draw control back if it's not currently added
               if (!isDrawControlAdded) {
               map.addControl(drawControl);
               isDrawControlAdded = true;
@@ -677,9 +719,9 @@
             if (drawFeatureButton) {
               drawFeatureButton.setAttribute('disabled', false);
             }
-              }
-            };
-            return button;
+        }
+      };
+      return button;
     };
 
     // Add the control to the map
