pagination buttons change

--- a/dashboard.html
+++ b/dashboard.html
@@ -498,9 +498,9 @@
         <!-- /////////////////////////////////////////newly adedd  for pagination   19-03-2024 ////////////////////////////////////////////////////// -->
 
         <div id="paginationControls">
-          <button id="previousPageButton">Previous</button>
+          <button class="pagibtn" id="previousPageButton"><i class="fa-solid fa-backward"></i></button>
           <span>Page <span id="currentPage"></span></span>
-          <button id="nextPageButton">Next</button>
+          <button class="pagibtn" id="nextPageButton"><i class="fa-solid fa-forward"></i></button>
         </div>
 
         <style>
